// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expo Plugin iOS – applyPodfileGlobalVariables adds blocks to a blank podfile 1`] = `
Snapshot Diff:
- First value
+ Second value


  platform :ios, '12.0'

+ # @generated begin @maplibre/maplibre-react-native:global-variables - expo prebuild (DO NOT MODIFY) sync-532b7bef83234177a5be487c8a71864bd92b1dd0
+ $MLRN_NATIVE_VERSION = "0.0.0"
+ # @generated end @maplibre/maplibre-react-native:global-variables
  target 'HelloWorld' do
  end

`;

exports[`Expo Plugin iOS – applyPodfileGlobalVariables adds blocks to a expo prebuild template podfile 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -12,10 +12,13 @@
  install! 'cocoapods',
    :deterministic_uuids => false

  prepare_react_native_project!

+ # @generated begin @maplibre/maplibre-react-native:global-variables - expo prebuild (DO NOT MODIFY) sync-532b7bef83234177a5be487c8a71864bd92b1dd0
+ $MLRN_NATIVE_VERSION = "0.0.0"
+ # @generated end @maplibre/maplibre-react-native:global-variables
  target 'HelloWorld' do
    use_expo_modules!

    if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
      config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
`;

exports[`Expo Plugin iOS – applyPodfileGlobalVariables adds blocks to a react native template podfile 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -13,10 +13,13 @@
  if linkage != nil
    Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
    use_frameworks! :linkage => linkage.to_sym
  end

+ # @generated begin @maplibre/maplibre-react-native:global-variables - expo prebuild (DO NOT MODIFY) sync-532b7bef83234177a5be487c8a71864bd92b1dd0
+ $MLRN_NATIVE_VERSION = "0.0.0"
+ # @generated end @maplibre/maplibre-react-native:global-variables
  target 'HelloWorld' do
    config = use_native_modules!

    use_react_native!(
      :path => config[:reactNativePath],
`;

exports[`Expo Plugin iOS – applyPodfileGlobalVariables adds both spmSpec and nativeVersion when set 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -12,10 +12,21 @@
  install! 'cocoapods',
    :deterministic_uuids => false

  prepare_react_native_project!

+ # @generated begin @maplibre/maplibre-react-native:global-variables - expo prebuild (DO NOT MODIFY) sync-658affcd13c2a58a4d2f9c92a6ea5016350863c0
+ $MLRN_NATIVE_VERSION = "0.0.0"
+ $MLRN_SPM_SPEC = {
+   url: "https://github.com/maplibre/maplibre-gl-native-distribution",
+   requirement: {
+     kind: "upToNextMajorVersion",
+     minimumVersion: "0.0.0"
+   },
+   product_name: "MapLibre"
+ }
+ # @generated end @maplibre/maplibre-react-native:global-variables
  target 'HelloWorld' do
    use_expo_modules!

    if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
      config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
`;

exports[`Expo Plugin iOS – applyPodfileGlobalVariables updates block on change 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -12,12 +12,12 @@
  install! 'cocoapods',
    :deterministic_uuids => false

  prepare_react_native_project!

- # @generated begin @maplibre/maplibre-react-native:global-variables - expo prebuild (DO NOT MODIFY) sync-532b7bef83234177a5be487c8a71864bd92b1dd0
- $MLRN_NATIVE_VERSION = "0.0.0"
+ # @generated begin @maplibre/maplibre-react-native:global-variables - expo prebuild (DO NOT MODIFY) sync-32756e2e8076c293937f23fdf0b9979d21ebae95
+ $MLRN_NATIVE_VERSION = "1.1.1"
  # @generated end @maplibre/maplibre-react-native:global-variables
  target 'HelloWorld' do
    use_expo_modules!

    if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
`;
